// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order.js order is undefined 1`] = `""`;

exports[`Order.js order with items 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      Lamodник.ru
    </span>
    <span
      id="date"
    >
      13 марта, ср, 2019 год
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div
      className="Order-item"
      key="0"
    >
      Жакет - BOREAL5
    </div>
    <div
      className="Order-item"
      key="1"
    >
      Miss Gabby Костюм
    </div>
    <div
      className="Order-item"
      key="2"
    >
      Ostin перчатки мужские
    </div>
    <div
      className="Order-item"
      key="3"
    >
      Zara худи роз.
    </div>
  </div>
</div>
`;

exports[`Order.js order without date and shop 1`] = `""`;

exports[`Order.js order without items 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      Эльдоградо
    </span>
    <span
      id="date"
    >
      14 марта, чт, 2019 год
    </span>
  </div>
  <div
    className="Order-items"
  />
</div>
`;
